added more wt assignments

--- a/SEM 2/WT/assignment 1/q3/styles.css
+++ b/SEM 2/WT/assignment 1/q3/styles.css
@@ -5,6 +5,10 @@
     /*URL to font*/
 }
 
+*::selection{
+    background-color: black;
+}
+
 body {
     font-family: 'Lack';
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
