14th march ds lab

--- a/SEM 2/WT/assignment 1/q3/styles.css
+++ b/SEM 2/WT/assignment 1/q3/styles.css
@@ -141,6 +141,7 @@ table {
 
 td,
 th {
+    /* white-space: nowrap; */
     border: 1px solid #dbdbdb;
     padding: 3px;
     /* border: 1px solid #E88741; */
